# bazzite-laptop

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  .sops.yaml  99-gaming-network.conf  CHANGELOG.md  CLAUDE.md  HANDOFF.md  P140-sesh.md  README.md  backup-official-guide.md  backup.sh  bazzite-optimization-guide.md  bazzite-security-tray.desktop  bazzite-security-tray.py  clam-speed-guide.md  clamav-alert.sh  clamav-deep.timer  clamav-healthcheck.sh  clamav-quick.service  clamav-quick.timer  clamav-scan.sh  clamav-scans-logrotate  gamemode.ini  luks-upgrade.sh  msmtprc.template  nvidia-shader-cache.conf  project-instructions.md  pyproject.toml  reference-links.md  requirements-ai.txt  requirements.txt  security-deep-scan.desktop  security-directory.desktop  security-quick-scan.desktop  security-scan-logs.desktop  security-tray-start.desktop  security-update-email-password.desktop  services-optimization-current.md  setup-security-folder.sh  (+4 more)
.github/: dependabot.yml
.opencode/: AGENTS.md  dcp.json  vibeguard.json
agents/: architect.yaml  coder.yaml  reviewer.yaml  security-architect.yaml  tester.yaml
ai/: budget.py  budget_routing.py  budget_scoped.py  cache.py  cache_semantic.py  canary.py  config.py  deployment_profiles.py  figma_service.py  g4f_manager.py  health.py  hooks.py  insights.py  integration_governance.py  intel_scraper.py  key_manager.py  llm_proxy.py  memory.py  metrics.py  project_workflow_service.py  provenance.py  provider_intel.py  provider_registry.py  provider_service.py  rate_limiter.py  retention_privacy.py  router.py  routing_replay.py  security_service.py  self_healing.py  settings_service.py  shell_service.py
configs/: 20-nvidia-coolbits.conf  60-ioschedulers.rules  90-bazzite-oomd.conf  90-bazzite-vm.conf  90-oomd-protect-user-slice.conf  ai-rate-limits.json  clamd-scan.conf  device-uuids.conf  earlyoom  freshclam-overrides.conf  gamemode.ini  guidance.config.mjs  journald-bazzite.conf  keys.env.enc  kwin-nvidia.sh  litellm-config.yaml  logrotate-system-health  mcp-bridge-allowlist.yaml  mitre-attack-map.json  r2-config.yaml  ruflo-sidecar.json  safety-rules.json  security-autopilot-policy.yaml  thermal-protection.conf  token-budget.json
desktop/: bazzite-security-tray.desktop  security-dashboard.desktop  security-deep-scan.desktop  security-directory.desktop  security-firewall.desktop  security-health-logs.desktop  security-health-snapshot.desktop  security-healthcheck.desktop  security-quarantine.desktop  security-quick-scan.desktop  security-scan-logs.desktop  security-tray-qt-autostart.desktop  security-tray-start.desktop  security-update-email-password.desktop  security-usb-devices.desktop  security.menu
docs/: AGENT.md  ARCHITECTURE_EVOLUTION.md  CHANGELOG.md  P101_COMPLETION_REPORT.md  P101_PLAN.md  P102_PLAN.md  P103_PLAN.md  P104_PLAN.md  P105_PLAN.md  P106_PLAN.md  P107_PLAN.md  P108_PLAN.md  P109_PLAN.md  P110_PLAN.md  P111_FINAL_ACCEPTANCE_REPORT.md  P111_PLAN.md  P119_P139_DATABASE_GROUNDED_ROADMAP.md  P119_PLAN.md  P120_PLAN.md  P121_PLAN.md  P122_PLAN.md  P123_PLAN.md  P124_PLAN.md  P125_PLAN.md  P131_PLAN.md  P132_PLAN.md  P133_PLAN.md  P134_PLAN.md  P135_PLAN.md  P136_PLAN.md  P137_PLAN.md  P138_PLAN.md  P143_UI_IMPLEMENTATION_MAP.md  P143_UI_REDESIGN_SPEC.md  P143_WIDGET_CATALOG.md  P60_REMEDIATION_SUMMARY.md  P61_COMPLETION_REPORT.md  P61_TRAINING_SUMMARY.md  P63_COMPLETION_REPORT.md  P63_PLAN.md  (+93 more)
scripts/: analyze_coverage.py  archive-logs-r2.py  backup.sh  bazzite-security-test.sh  canary.sh  check-deps.sh  clamav-alert.sh  clamav-healthcheck.sh  clamav-scan.sh  cleanup-auto-memory.py  code-quality.sh  coverage_analysis.py  deploy-services.sh  deploy.sh  find_untested.py  gaming-analyze.sh  gaming-profile.sh  generate-weekly-insights.py  guidance-check.mjs  guidance-hooks.mjs  guidance-init.mjs  index-code.py  ingest-code.sh  ingest-docs.sh  ingest-patterns.py  install-hooks.sh  install-user-timers.sh  integration-test.sh  lancedb-optimize.sh  lancedb-prune.py  log-task-success.py  luks-upgrade.sh  manage-keys.sh  mcp-stdio-bridge.sh  metrics-compact.py  migrate-embeddings.sh  newelle-exec.sh  newelle-sudo.sh  optimize.sh  parse-handoff.py  (+31 more)
systemd/: ai-workflow-health.service  ai-workflow-health.timer  ai.slice  bazzite-claude-flow-mcp.service  bazzite-intel-scrape.service  bazzite-intel-scrape.timer  (+48 more)
(+705 files in other folders)
