[project]
name = "bazzite-ai"
version = "0.1.0"
description = "AI enhancement layer for bazzite-laptop security monitoring"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "S", "B", "UP"]
ignore = ["S603", "S607"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S108"]
"tray/**" = ["E402", "I001", "S110"]
"ai/agents/**" = ["S110"]
"ai/hooks.py" = ["S110"]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "tray"]
skips = ["B603", "B607"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]
