[project]
name = "bazzite-ai"
version = "0.1.0"
description = "AI enhancement layer for bazzite-laptop security monitoring"
requires-python = ">=3.12"
dependencies = [
    "sentry-sdk>=2.57.0",
]

[project.optional-dependencies]
tray = ["PySide6>=6.6"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "S", "B", "UP"]
# S603/S607 only suppressed where subprocess is intentionally used without shell
# Do NOT suppress globally — moved to per-file-ignores below

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S108", "S603", "S607"]
"tray/**" = ["E402", "I001", "S110"]
"ai/router.py" = ["E402"]  # sentry_sdk.init() must run before other imports
"ai/hooks.py" = ["S110", "S607"]
# Scripts intentionally call subprocesses with partial paths (systemctl, clamscan etc.)
"scripts/**" = ["S603", "S607"]
"ai/system/**" = ["S603", "S607", "S110"]
"ai/alerts/**" = ["S603", "S607", "S110"]
"ai/agents/**" = ["S603", "S607", "S110"]
"ai/code_intel/**" = ["S112"]
"ai/code_quality/**" = ["S603"]
"ai/gaming/**" = ["S603", "S607"]
"ai/threat_intel/**" = ["S603", "S607"]
"ai/tools/builder.py" = ["S102", "B904"]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "tray"]
# B603/B607: subprocess without shell / partial executable path
# Only skip in scripts and system modules, not project-wide
skips = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
timeout = 60
timeout_method = "thread"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "quarantined: flaky test excluded from main suite",
    "requires_embedding: needs real embedding provider",
    "requires_writable_db: needs writable LanceDB",
    "requires_network: needs live network/API access",
    "unit: fast isolated unit tests",
]
